--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <title>Teerautp.Dev</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/dab589d040.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css" />
+    <!-- <link rel="stylesheet" href="./style.css" /> -->
 </head>
 
 <body>
-    <div class="min-h-screen bg-gradient-to-tr from-yellow-50 to-yellow-300 bg-center bg-cover px-28 py-5">
-        <nav class="flex items-center">
-            <!-- <img src="./images/logo.dev.png" class="w-40 cursor-pointer"/> -->
-            <div class="w-40 cursor-pointer" style="transform: scale(1);"><svg width="231.4" height="37.32619935641992"
+
+    <nav class="relative container mx-auto items-center">
+        <div class="flex items-center justify-between">
+            <div class="pt-2">
+                <h2>Teerawutp.Dev</h2>
+            </div>
+            <!-- <div class="pt-2" style="transform: scale(1);"><svg width="231.4" height="37.32619935641992"
                     viewBox="0 0 369.54838709677415 59.61035768633375" class="css-1j8o68f">
                     <defs id="SvgjsDefs1366"></defs>
                     <g id="SvgjsG1367" featurekey="QMusi1-0"
@@ -50,14 +53,51 @@
                             d="M3.94 9.3 l-2.84 0 c-0.1 0 -0.18 -0.08 -0.18 -0.18 l0 -2.14 c0 -0.1 0.08 -0.18 0.18 -0.18 l8.34 0 c0.1 0 0.18 0.08 0.18 0.18 l0 2.14 c0 0.1 -0.08 0.18 -0.18 0.18 l-2.84 0 l0 10.52 c0 0.1 -0.08 0.18 -0.18 0.18 l-2.3 0 c-0.1 0 -0.18 -0.08 -0.18 -0.18 l0 -10.52 z M8.22 7.9 l-6.04 0 c-0.14 0 -0.14 0.26 0 0.26 l2.96 0 l0 10.6 c0 0.14 0.26 0.14 0.26 0 l0 -10.6 l2.82 0 c0.2 0 0.18 -0.26 0 -0.26 z M12.580000000000002 20 c-0.1 0 -0.16 -0.08 -0.16 -0.18 l0 -12.84 c0 -0.1 0.06 -0.18 0.16 -0.18 l6.8 0 c0.1 0 0.18 0.08 0.18 0.18 l0 2.14 c0 0.1 -0.08 0.18 -0.18 0.18 l-4.32 0 l0 2.72 l3.36 0 c0.1 0 0.16 0.08 0.16 0.18 l0 2.18 c0 0.1 -0.06 0.18 -0.16 0.18 l-3.36 0 l0 2.94 l4.32 0 c0.1 0 0.18 0.08 0.18 0.18 l0 2.14 c0 0.1 -0.08 0.18 -0.18 0.18 l-6.8 0 z M13.580000000000002 8.06 l0 10.64 c0 0.12 0.08 0.16 0.16 0.16 l4.6 0 c0.18 0 0.14 -0.24 0 -0.24 l-4.5 0 l0 -5.22 l3.68 0 c0.12 0 0.12 -0.28 0 -0.28 l-3.68 0 l0 -4.96 l4.5 0 c0.14 0 0.18 -0.26 0 -0.26 l-4.6 0 c-0.08 0 -0.16 0.06 -0.16 0.16 z M23.1 20 c-0.1 0 -0.16 -0.08 -0.16 -0.18 l0 -12.84 c0 -0.1 0.06 -0.18 0.16 -0.18 l6.8 0 c0.1 0 0.18 0.08 0.18 0.18 l0 2.14 c0 0.1 -0.08 0.18 -0.18 0.18 l-4.32 0 l0 2.72 l3.36 0 c0.1 0 0.16 0.08 0.16 0.18 l0 2.18 c0 0.1 -0.06 0.18 -0.16 0.18 l-3.36 0 l0 2.94 l4.32 0 c0.1 0 0.18 0.08 0.18 0.18 l0 2.14 c0 0.1 -0.08 0.18 -0.18 0.18 l-6.8 0 z M24.1 8.06 l0 10.64 c0 0.12 0.08 0.16 0.16 0.16 l4.6 0 c0.18 0 0.14 -0.24 0 -0.24 l-4.5 0 l0 -5.22 l3.68 0 c0.12 0 0.12 -0.28 0 -0.28 l-3.68 0 l0 -4.96 l4.5 0 c0.14 0 0.18 -0.26 0 -0.26 l-4.6 0 c-0.08 0 -0.16 0.06 -0.16 0.16 z M40.96 14.780000000000001 c-0.28 0.58 -0.68 1.02 -1.24 1.28 l1.68 3.7 c0.06 0.12 -0.02 0.24 -0.14 0.24 l-2.46 0 c-0.08 0 -0.12 -0.04 -0.14 -0.1 l-1.56 -3.4 l-1.02 0 l0 3.32 c0 0.1 -0.08 0.18 -0.18 0.18 l-2.3 0 c-0.08 0 -0.14 -0.08 -0.14 -0.18 l0 -12.84 c0 -0.1 0.06 -0.18 0.14 -0.18 l4.16 0 c2.22 0 3.56 1.26 3.56 3.6 l0 2.52 c0 0.7 -0.12 1.36 -0.36 1.86 z M38.7 12.3 l0 -1.3 c0 -1.4 -0.52 -1.54 -2.04 -1.54 l-0.58 0 l0 4.42 l0.58 0 c1.26 0 2 -0.02 2.04 -1.58 z M34.92 18.78 l0 -3.42 l2.88 0 l1.68 3.46 c0.04 0.1 0.28 0.06 0.22 -0.12 l-1.68 -3.4 c1.56 -0.22 2.1 -1.04 2.1 -2.52 l0 -2.5 c0 -2.2 -2 -2.38 -2.62 -2.38 l-2.7 0 c-0.04 0 -0.12 0.06 -0.12 0.12 l0 10.76 c0 0.14 0.24 0.14 0.24 0 z M39.88 10.28 l0 2.5 c0 2.04 -1.3 2.32 -2.56 2.32 l-2.4 0 l0 -6.94 l2.58 0 c2.16 0 2.38 1.46 2.38 2.12 z M47.36000000000001 6.92 c0.02 -0.06 0.06 -0.12 0.14 -0.12 l2.48 0 c0.08 0 0.12 0.06 0.14 0.12 l3.46 12.86 c0.02 0.12 -0.06 0.22 -0.18 0.22 l-2.28 0 c-0.06 0 -0.12 -0.04 -0.14 -0.12 l-0.78 -2.8 l-2.92 0 l-0.76 2.8 c-0.02 0.08 -0.06 0.12 -0.14 0.12 l-2.3 0 c-0.12 0 -0.2 -0.1 -0.18 -0.22 z M47.92 14.6 l1.66 0 l-0.86 -3.02 z M51 15.780000000000001 l0.92 3 c0.04 0.12 0.26 0.1 0.2 -0.06 l-3.2 -10.64 c-0.06 -0.26 -0.4 -0.28 -0.46 0 l-3.1 10.64 c-0.06 0.14 0.16 0.2 0.22 0.08 l0.88 -3.02 l4.54 0 z M46.52 15.52 l2.18 -7.36 l2.22 7.36 l-4.4 0 z M70.58 6.800000000000001 c0.12 0 0.2 0.1 0.16 0.22 l-3.44 12.86 c-0.02 0.08 -0.1 0.12 -0.18 0.12 l-2.2 0 c-0.08 0 -0.14 -0.04 -0.18 -0.12 l-1.36 -5.06 l-1.84 5.08 c-0.02 0.06 -0.06 0.1 -0.14 0.1 l-2.12 0 c-0.08 0 -0.14 -0.04 -0.16 -0.12 l-3.42 -12.88 c-0.02 -0.1 0.04 -0.2 0.18 -0.2 l2.3 0 c0.06 0 0.12 0.06 0.14 0.12 l2.22 8.48 l1.66 -5.02 l-0.92 -3.36 c-0.04 -0.12 0.06 -0.22 0.16 -0.22 l2.48 0 c0.08 0 0.12 0.02 0.16 0.12 l1.84 8.16 l2.2 -8.16 c0.02 -0.06 0.08 -0.12 0.16 -0.12 l2.3 0 z M63.54 10.58 l-3.02 8.04 l-3.24 -10.66 c-0.04 -0.14 -0.28 -0.08 -0.24 0.06 l3.24 10.68 c0.06 0.28 0.4 0.26 0.5 0 l2.86 -7.72 l2.1 7.7 c0.08 0.3 0.44 0.3 0.5 0.02 l3.18 -10.68 c0.06 -0.14 -0.2 -0.22 -0.24 -0.06 l-3.16 10.66 l-2.92 -10.66 c-0.02 -0.14 -0.28 -0.1 -0.22 0.06 z M80.22 15.379999999999999 l0 -8.4 c0 -0.1 0.08 -0.18 0.18 -0.18 l2.28 0 c0.1 0 0.18 0.08 0.18 0.18 l0 9.04 c0 2.88 -1.58 4.18 -4.56 4.18 c-2.82 0 -4.58 -1.12 -4.58 -4.18 l0 -9.04 c0 -0.1 0.08 -0.18 0.18 -0.18 l2.3 0 c0.1 0 0.18 0.08 0.18 0.18 l0 8.4 c0 1.74 0.98 2.12 1.8 2.12 l0.24 0 c1.24 0 1.8 -0.84 1.8 -2.12 z M74.96000000000001 8.08 l0 7.78 c0 1.8 1.22 3.1 3.12 3.1 l0.5 0 c1.9 0 3.14 -1.36 3.14 -3.1 l0 -7.78 c0 -0.18 -0.24 -0.2 -0.24 0 l0 7.78 c0 1.64 -1.18 2.84 -2.9 2.84 l-0.5 0 c-1.68 0 -2.88 -1.08 -2.88 -2.84 l0 -7.78 c0 -0.18 -0.24 -0.18 -0.24 0 z M88.52 9.3 l-2.84 0 c-0.1 0 -0.18 -0.08 -0.18 -0.18 l0 -2.14 c0 -0.1 0.08 -0.18 0.18 -0.18 l8.34 0 c0.1 0 0.18 0.08 0.18 0.18 l0 2.14 c0 0.1 -0.08 0.18 -0.18 0.18 l-2.84 0 l0 10.52 c0 0.1 -0.08 0.18 -0.18 0.18 l-2.3 0 c-0.1 0 -0.18 -0.08 -0.18 -0.18 l0 -10.52 z M92.8 7.9 l-6.04 0 c-0.14 0 -0.14 0.26 0 0.26 l2.96 0 l0 10.6 c0 0.14 0.26 0.14 0.26 0 l0 -10.6 l2.82 0 c0.2 0 0.18 -0.26 0 -0.26 z M101.30000000000001 6.800000000000001 c2.22 0 3.56 1.26 3.56 3.6 l0 2.52 c0 2.14 -1.32 3.58 -3.56 3.58 l-1.68 0 l0 3.32 c0 0.1 -0.08 0.18 -0.18 0.18 l-2.3 0 c-0.08 0 -0.14 -0.08 -0.14 -0.18 l0 -12.84 c0 -0.1 0.06 -0.18 0.14 -0.18 l4.16 0 z M102.24000000000001 12.32 l0 -1.32 c0 -1.38 -0.64 -1.52 -2.04 -1.52 l-0.58 0 l0 4.4 l0.58 0 c1.1 0 2.04 -0.2 2.04 -1.56 z M103.66 12.780000000000001 l0 -2.5 c0 -2.2 -1.7 -2.38 -2.62 -2.38 l-2.7 0 c-0.04 0 -0.12 0.06 -0.12 0.12 l0 10.76 c0 0.14 0.24 0.14 0.24 0 l0 -3.4 l2.4 0 c1.76 0 2.8 -0.62 2.8 -2.6 z M98.46000000000001 8.16 l2.58 0 c2.22 0 2.36 1.46 2.36 2.12 l0 2.5 c0 2.04 -1.28 2.32 -2.54 2.32 l-2.4 0 l0 -6.94 z M108.72000000000001 20.18 c-0.94 0 -1.74 -0.8 -1.74 -1.78 s0.8 -1.74 1.74 -1.74 c0.98 0 1.8 0.76 1.8 1.74 s-0.82 1.78 -1.8 1.78 z M108.74000000000001 19 c0.3 0 0.54 -0.22 0.54 -0.52 s-0.24 -0.52 -0.54 -0.52 s-0.52 0.22 -0.52 0.52 s0.22 0.52 0.52 0.52 z M108.74000000000001 18.2 c0.16 0 0.28 0.12 0.28 0.28 c0 0.18 -0.12 0.3 -0.28 0.3 s-0.3 -0.12 -0.3 -0.3 c0 -0.16 0.14 -0.28 0.3 -0.28 z M118.68000000000002 6.800000000000001 c1.36 0 2.38 0.38 3.06 1.12 c0.6 0.66 0.9 1.64 0.9 2.84 l0 5.3 c0 2.42 -1.4 3.94 -3.96 3.94 l-5 0 c-0.1 0 -0.16 -0.08 -0.16 -0.18 l0 -12.84 c0 -0.1 0.06 -0.18 0.16 -0.18 l5 0 z M120.02000000000001 15.46 l0 -4.1 c0 -1.26 -0.66 -2.06 -2.06 -2.06 l-1.8 0 l0 8.2 l1.8 0 c1.2 0 2.06 -0.78 2.06 -2.04 z M114.74000000000001 8.02 l0 10.76 c0 0.08 0.08 0.1 0.12 0.1 l3.26 0 c2.3 0 3.34 -1.38 3.34 -2.66 l0 -5.12 c0 -2.12 -1.12 -3.2 -3.4 -3.2 l-3.2 0 c-0.04 0 -0.12 0.02 -0.12 0.12 z M121.22000000000001 11.1 l0 5.12 c0 1.6 -1.6 2.44 -3.1 2.44 l-3.14 0 l0 -10.5 l3.08 0 c2.1 0 3.16 0.94 3.16 2.94 z M126.30000000000003 20 c-0.1 0 -0.16 -0.08 -0.16 -0.18 l0 -12.84 c0 -0.1 0.06 -0.18 0.16 -0.18 l6.8 0 c0.1 0 0.18 0.08 0.18 0.18 l0 2.14 c0 0.1 -0.08 0.18 -0.18 0.18 l-4.32 0 l0 2.72 l3.36 0 c0.1 0 0.16 0.08 0.16 0.18 l0 2.18 c0 0.1 -0.06 0.18 -0.16 0.18 l-3.36 0 l0 2.94 l4.32 0 c0.1 0 0.18 0.08 0.18 0.18 l0 2.14 c0 0.1 -0.08 0.18 -0.18 0.18 l-6.8 0 z M127.30000000000003 8.06 l0 10.64 c0 0.12 0.08 0.16 0.16 0.16 l4.6 0 c0.18 0 0.14 -0.24 0 -0.24 l-4.5 0 l0 -5.22 l3.68 0 c0.12 0 0.12 -0.28 0 -0.28 l-3.68 0 l0 -4.96 l4.5 0 c0.14 0 0.18 -0.26 0 -0.26 l-4.6 0 c-0.08 0 -0.16 0.06 -0.16 0.16 z M138.36000000000004 6.92 l2.2 8.28 l2.26 -8.28 c0.04 -0.06 0.08 -0.12 0.16 -0.12 l2.28 0 c0.12 0 0.2 0.1 0.16 0.22 l-3.46 12.86 c-0.04 0.08 -0.08 0.12 -0.16 0.12 l-2.48 0 c-0.06 0 -0.12 -0.04 -0.14 -0.12 l-3.46 -12.86 c-0.02 -0.12 0.06 -0.22 0.18 -0.22 l2.3 0 c0.08 0 0.12 0.06 0.16 0.12 z M140.52000000000004 18.62 l-3.34 -10.66 c-0.06 -0.16 -0.28 -0.06 -0.22 0.06 l3.32 10.68 c0.08 0.3 0.4 0.32 0.5 0 l3.2 -10.68 c0.04 -0.12 -0.18 -0.2 -0.22 -0.06 z">
                         </path>
                     </g>
-                </svg></div>
-            <ul class="flex-1 text-center">
-                <li class="list-none inline-block px-5"><a href="#" class="no-underline">Home</a></li>
-                <li class="list-none inline-block px-5"><a href="#about" class="no-underline">About</a></li>
-                <li class="list-none inline-block px-5"><a href="#portfolio" class="no-underline">Portfolio</a></li>
-                <li class="list-none inline-block px-5"><a href="#contact" class="no-underline">Contact</a></li>
-            </ul>
-        </nav>
+                </svg>
+            </div> -->
+            <div class="hidden md:flex space-x-6">
+                <a href="#" class="no-underline hover:text-orange-400 duration-300">Home</a>
+                <a href="#about" class="no-underline hover:text-orange-400 duration-300">About</a>
+                <a href="#portfolio" class="no-underline hover:text-orange-400 duration-300">Portfolio</a>
+                <a href="#contact" class="no-underline hover:text-orange-400 duration-300">Contact</a>
+                </ul>
+            </div>
+        </div>
+
+    </nav>
+    <section id="home">
+        <div class="container flex flex-column-reverse items-center px-6 
+        mx-auto mt-10 space-y-0 md:flex-row ">
+            <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
+                <h1 class="text-6xl font-semibold leading-normal md:text-5xl md:text-left">Hi, I'm Teerawut.<br>call
+                    me <span class="font-light max-w-xl">"arm"</span>.</h1>
+                <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">Lorem ipsum dolor sit amet
+                    consectetur, adipisicing elit. Vitae tenetur autem eveniet dolores blanditiis
+                    reprehenderit voluptas, deserunt non vel? Iure error officiis maiores harum earum illo perferendis
+                    eligendi accusamus nesciunt!</p>
+
+                <div class="flex justify-center md:justify-start">
+                    <a href="#" class="bg-yellow-400 rounded-3xl py-3 px-8 font-medium inline-block mr-4 
+                   
+                    hover:bg-transparent 
+                    hover:border-yellow-600
+                    hover:text-orange-400 duration-300 
+                    hover:border border border-transparent"><i class="fa-solid fa-file-arrow-down"></i> Download CV
+                    </a>
+                </div>
+            </div>
+            <!-- image profile -->
+            
+            <div class="md:w-1/12">
+            <img class="relative aspect-[9/10] w-77 flex-none overflow-hidden 
+            rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:w-72 sm:rounded-2xl rotate-2" src="images/arm3.jpeg" alt=""></div>
+        </div>
+<!-- feature Portfolio -->
+        <div></div>
+    </section>
+    <!-- <div
+        class=" relative mx-auto min-h-screen bg-gradient-to-tr from-yellow-50 to-yellow-300 bg-center bg-cover px-28 py-5">
+
         <div class="text-gray-800 mt-48 max-w-lg">
             <h1 class="text-6xl font-semibold leading-normal">Hi, I'm Teerawut.<br>Can call me <span
                     class="font-light max-w-xl">"arm"</span>.</h1>
@@ -66,16 +106,15 @@
                 eligendi accusamus nesciunt!</p>
 
             <div class="mt-10">
-                <a href="#" 
-                class="bg-yellow-400 rounded-3xl py-3 px-8 font-medium inline-block mr-4 
+                <a href="#" class="bg-yellow-400 rounded-3xl py-3 px-8 font-medium inline-block mr-4 
                     hover:bg-transparent 
                     hover:border-yellow-600
                     hover:text-orange-400 duration-300 
-                    hover:border border border-transparent"><i class="fa-solid fa-file-arrow-down"></i>  Download CV
+                    hover:border border border-transparent"><i class="fa-solid fa-file-arrow-down"></i> Download CV
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
