update image portfolio

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 px-4 mb-8  ">
                     <div class="bg-white p-6 rounded-lg shadow-md  hover:text-yellow-400 duration-300 cursor-pointer">
                         <h3 class="text-xl font-semibold mb-2">JS 21 Days </h3>
-                        <img src="/images/js21.png" alt="JS21" class="mb-4 mt-4 rounded-lg w-full h-40 object-cover">
+                        <img src="./images/js21.png" alt="js21" class="mb-4 mt-4 rounded-lg w-full h-40 object-cover">
                         <span class="text-gray-500">
                             <a href="https://js21days-c1e47.web.app/" target="_blank" class="bg-yellow-400 rounded-3xl py-3 px-8 font-medium inline-block mr-4 
                    
