--- a/index.html
+++ b/index.html
@@ -128,13 +128,29 @@
                             </a></span>
                     </div>
                 </div>
-                 <!-- Portfolio Card 2 -->
-                 <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 px-4 mb-8  ">
+                <!-- Portfolio Card 2 -->
+                <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 px-4 mb-8  ">
                     <div class="bg-white p-6 rounded-lg shadow-md  hover:text-yellow-400 duration-300 cursor-pointer">
                         <h3 class="text-xl font-semibold mb-2">United Blog</h3>
                         <img src="./images/p2.png" alt="js21" class="mb-4 mt-4 rounded-lg w-full h-40 object-cover">
                         <span class="text-gray-500">
                             <a href="https://taupe-stardust-18d1cf.netlify.app/" target="_blank" class="bg-yellow-400 rounded-3xl py-3 px-8 font-medium inline-block mr-4 
+                   
+                                    hover:bg-transparent 
+                                    hover:border-yellow-600
+                                    hover:text-orange-400 duration-300 
+                                    hover:border border border-transparent">See more
+                            </a></span>
+                    </div>
+                </div>
+
+                <!-- Portfolio Card 3 -->
+                <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 px-4 mb-8  ">
+                    <div class="bg-white p-6 rounded-lg shadow-md  hover:text-yellow-400 duration-300 cursor-pointer">
+                        <h3 class="text-xl font-semibold mb-2">Landing Page</h3>
+                        <img src="./images/p3.png" alt="js21" class="mb-4 mt-4 rounded-lg w-full h-40 object-cover">
+                        <span class="text-gray-500">
+                            <a href="https://melodious-pavlova-14248e.netlify.app/" target="_blank" class="bg-yellow-400 rounded-3xl py-3 px-8 font-medium inline-block mr-4 
                    
                                     hover:bg-transparent 
                                     hover:border-yellow-600
