--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 Portfolio
             </h2>
             <div class="flex flex-wrap justify-center -mx-4">
-                <!-- Portfolio Card 1 -->
+                <!-- Portfolio Card 1 new -->
                 <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 px-4 mb-8  ">
                     <div class="bg-white p-6 rounded-lg shadow-md  hover:text-yellow-400 duration-300 cursor-pointer">
                         <h3 class="text-xl font-semibold mb-2">E-Comerce Dashboard</h3>
